re PR libgomp/50386 (libgomp.h:87:5: error: unnamed struct/union that defines no instances)

gcc/
	PR middle-end/50386
	PR middle-end/50326
	* tree-sra.c (build_ref_for_model): Use the type of the field as
	the type of the COMPONENT_REF.

From-SVN: r179285